--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
 @import "jquery-ui/datepicker";
 @import "jquery-ui/sortable";
 @import "leaflet";
+@import "leaflet.markercluster";
 
 @import "foundation_and_overrides";
 @import "fonts";
